--- a/paper.tex
+++ b/paper.tex
@@ -258,7 +258,7 @@ There were 24 valid entries into the challenge.  They are listed in table~\ref{t
   \hline
   1 & AstrOmatic & Space-Based & Bertin   \\ 
   2 & GAHEC IRAP & Space-Based & Cabanac  \\ 
-  3 & CAS Swinburne Melb & Ground-Based & Jacobs   \\ 
+  3 & \red{CAS Swinburne Melb} & Ground-Based & Jacobs   \\ 
   4 & ALL-star & Ground-Based & Avestruz, N.Li \& Lightman  \\ 
   5 & Manchester1 & Space-Based & Jackson \& Tagore  \\ 
   6 & CMU-DeepLens-Resnet-Voting & Space-Based & Ma, Lanusse \& C. Li  \\ 
@@ -266,7 +266,7 @@ There were 24 valid entries into the challenge.  They are listed in table~\ref{t
   8 & CMU-DeepLens-ResNet & Space-Based & Francois Lanusse, Ma, C. Li \& Ravanbakhsh \\ 
   9 & CMU-DeepLens-Resnet-Voting & Ground-Based & Ma, Lanusse \& C. Li   \\ 
   10 & YattaLensLite & Space-Based &  Sonnenfeld  \\ 
-  11 & NeuralNet2 & Space-Based &  Davies  \\ 
+  11 & \red{NeuralNet2} & Space-Based &  Davies  \\ 
   12 & CAST & Ground-Based &  Roque De Bom, Valent\'{\i}n \&  Makler  \\ 
   13 & CMU-DeepLens-ResNet-ground3 & Ground-Based &  Lanusse, Ma, Ravanbakhsh \& C. Li \\ 
   14 & GAMOCLASS & Space-Based & Marc Huertas-Company, Tuccillo, Velasco-Forero \& Decenci\~{a}re \\ 
@@ -290,16 +290,15 @@ There were 24 valid entries into the challenge.  They are listed in table~\ref{t
 \label{sec:methods}
 
 This section contains short descriptions of the lens finding methods that were used in 
-the challenge.  Each subsection refers to a team which gave a separate entry.
-
-{\color{red} MM: May be we could separate the methods into three categories: machine-learning, arc-finders, visual inspection and group them accordingly}
+the challenge.  Each subsection refers to a team which gave a separate entry.  We have grouped the 
+methods into four categories according to the type of method used.
 
 \subsection{Visual Inspection}
 \subsubsection{Manchester/Manchester1 (Jackson,Tagore)}
 
 All images (a total of 100000) were examined for each of the space- and
-ground-based datasets. This was done by two observers; AT examined 30000
-images in each case and NJ examined 70000. Observation was carried out
+ground-based datasets. This was done by two observers; AT (Amit Tagore) examined 30000
+images in each case and NJ (Neal Jackson) examined 70000. Observation was carried out
 over a 48-hour period, at the rate of 5000/hr (NJ) and 2500/hr (AT). 
 The overall results, in terms of ROC curves, were very similar for 
 both observers. The space-based challenge produced areas of 0.800 and 
@@ -307,7 +306,7 @@ both observers. The space-based challenge produced areas of 0.800 and
 0.891 and 0.884.
 
 The Python scripts used for manual examination of multiple images are available
-onGitHub\footnote{https://github.com/nealjackson/bigeye} and are described in more detail
+on GitHub\footnote{https://github.com/nealjackson/bigeye} and are described in more detail
 in \citet{hartley2017support}. For one-colour data such as
 the space-based training set, the images are individually colour-scaled using
 square-root scaling. The bright limit of the colour-scale is determined
@@ -336,6 +335,10 @@ rate among the class-0 identifications was similar for both observers, at
 around 25\% for the space-based images and 20\% for the ground-based.
 
 \subsection{Arc-Finders}
+
+These methods seek to identify gravitationally lensed arcs and differentiate between them and 
+other objects such as spiral arms and edge on spirals using their width, color, curvature and other pre-selected criterion.
+
 \subsubsection{ IRAP (Cabanac)}
 
 \begin{figure}
@@ -344,7 +347,7 @@ around 25\% for the space-based images and 20\% for the ground-based.
  \label{fig:Cabanac}
 \end{figure}
 
-Arcfinder \citep{2006astro.ph..6757A,2007A&A...461..813C,2012ApJ...749...38M} illustrated Figure \ref{fig:Cabanac}, is a fast linear method that computes a pixel wise elongation parameter (ratio of first-order moments in a n-pix window oriented in proper reference frame) for all pixels of mexican-hat-smoothed FITS images. Arcfinder then extracts contiguous pixels above a given background and computes the candidate arcs length, width, area, radius of curvature and peak surface brightness. A final thresholding is set to maximize purity over completeness on a few typical arcs of the dataset.
+Arcfinder \citep{2006astro.ph..6757A,2007A&A...461..813C,2012ApJ...749...38M} illustrated in Figure \ref{fig:Cabanac}, is a fast linear method that computes a pixel wise elongation parameter (ratio of first-order moments in a n-pix window oriented in proper reference frame) for all pixels of mexican-hat-smoothed FITS images. Arcfinder then extracts contiguous pixels above a given background and computes the candidate arc's length, width, area, radius of curvature and peak surface brightness. A final thresholding is set to maximize purity over completeness on a few typical arcs of the dataset.
 For the current SL challenge, arcfinder was tuned to detect long and narrow arcs, and was optimized on a subset of 1000 simulated images with a grid covering a range of elongation windows and arc areas.  A python wrapper allows users to change parameters in a flexible way and run the arcfinder C code as a linux line command. Arcfinder took a couple of hours to run on the entire dataset with some overheads due to the dataset format. The code is publicly available at https://github.com/rcabanac/arcfinder.
 
 \subsubsection{YattaLens Lite (Sonnenfeld)}
@@ -373,11 +376,9 @@ A Support Vector Machine (SVM) is a supervised machine learning method which use
 During our development of an SVM classifier for lens finding, feature extraction initially involved the decomposition of each image into a set of objects, using SExtractor \citep{1996A&AS..117..393B} and GALFIT \citep{2002AJ....124..266P} to recover and subtract objects iteratively. This method had previously been used in a static algorithm approach which assigned points according to the morphological properties of each image \citep[see][]{2014A&A...566A..63J}. Lensed-like objects displaying, for example, greater ellipticity and tangentiality were awarded more points. Since the SVM operates in a fixed dimensional space,  properties of individual objects were collapsed into a fixed set describing the mean and variance of morphological properties of all the objects within an image. After training an SVM using these features we recorded a modest separation of lens and non-lens classes.
 
 An alternative approach was to design a set of Gabor filters to be applied to each sample. The Gabor kernel is described by a sinusoidal function multiplied by a Gaussian envelope. We discard the imaginary part of the function to leave, in two-dimensional space:
-
 \begin{equation}
 G_c[i,j]=Be^{-\frac{(i^2+j^2)}{2\sigma^2}} \mathrm{cos}\left(\frac{2\pi}{\lambda} (i\, \mathrm{cos} \, \theta + j\, \mathrm{sin} \,\theta)\right),
 \end{equation}
-
 where harmonic wavelength $\lambda$, Gaussian spread  $\sigma$ and orientation $\theta$ define the operation performed on each point $i,j$ in an image. Such a kernel is a popular image processing choice for edge detection and texture classification \citep[e.g.][]{Feichtinger98a,Springer-verlag97computationalmodels} and is thought to mimic some image processing functions of the mammalian brain \citep{Jones1233}.
 
 
@@ -391,7 +392,7 @@ where harmonic wavelength $\lambda$, Gaussian spread  $\sigma$ and orientation $
 Our final feature extraction procedure first applied a polar transform to each image in order to exploit the edge detection of the Gabor filter, picking out tangential components typical of galaxy-galaxy lensing. Each image was then convolved with several Gabor filters of varying frequency and rotation (see Fig.~\ref{gaborring}). Stability selection methods were used to investigate the classification performance using different combinations of filters. The responses for each Gabor filter when applied to each image were measured by calculating statistical moments for each filtered image. These moments formed  our final input data on which the SVM could be trained and applied. We used brute-force optimisation methods to select a non-linear SVM containing radial basis function (RBF) kernel and tuned a small set of regularisation hyperparameters to achieve good generalisation performance. During training and testing, our final and best scores achieved when testing on the lens finding challenge training data were an AUC of 0.88 for the space set and 0.95 for the ground set. Classification was performed using a modest desktop PC.
 
 %-------------------------------------------------%
-\subsubsection{ALL Methodology (Avestruz, Li, Lightman}
+\subsubsection{ALL (Avestruz, Li, Lightman)}
 %-------------------------------------------------%
 
 We detail the ALL team methodology in \citet{avestruz_etal17}. The
@@ -431,11 +432,12 @@ parameters to then train the entire dataset for the final model
 classifier that we used to evaluate the competition data.
 
 \subsection{Convolutional Neural Networks ((Lanusse)}
+
 Since Convolutional Neural Networks (CNNs) are central to many of the methods that will be described later a brief general description of them will be useful.
 A CNN \citep{Lecun1998} is a multi-layer feed-forward neural network model particularly well suited for processing natural images. With the very recent advances of the \textit{Deep Learning} framework \citep{Lecun2015}, models based on CNN architectures have reached or even surpassed human accuracy in image classification tasks \citep{He2015a}.
 
 The fundamental building block of a CNN is the \textit{convolutional layer}. This element applies a set of convolution filters on an input image to produce a series of so-called \textit{feature maps}. The coefficients of these filters are free parameters that are learned by the model. We will use the notation 
-$n \times n - n_c$ to denote a convolutional layer using filters of size $n \times n$ pixels and outputting $n_c$ feature maps.  In typical architectures, the size of these convolution filters is kept small (i.e. 3x3 or 5x5 pixels) to limit the complexity of the model. To capture features on larger scales, CNNs rely on a multi-resolution approach by interleaving convolutional layers with \textit{pooling layers} which apply a downsampling operation to the feature maps. The most common downsampling schemes are the max-pooling and average pooling strategies, which downsample an input image by taking respectively the maximum or average values within a given region (e.g. 2x2 patches for a downsampling of factor 2).
+$n \times n - n_c$ to denote a convolutional layer using filters of size $n \times n$ pixels and outputting $n_c$ feature maps.\red{(Need to make everyone conform to this notation.)}  In typical architectures, the size of these convolution filters is kept small (i.e. 3x3 or 5x5 pixels) to limit the complexity of the model. To capture features on larger scales, CNNs rely on a multi-resolution approach by interleaving convolutional layers with \textit{pooling layers} which apply a downsampling operation to the feature maps. The most common downsampling schemes are the max-pooling and average pooling strategies, which downsample an input image by taking respectively the maximum or average values within a given region (e.g. 2x2 patches for a downsampling of factor 2).
 
 A CNN architecture is therefore a stack of convolution layers and pooling layers, converting the input image into an increasing number of feature maps of progressively coarser resolution. The final feature maps can capture information on large scales and can reach a high-level of abstraction. To perform the classification itself from these feature maps, the CNN is typically topped by a fully-connected neural network outputting the class probability of the input image.
 
@@ -443,24 +445,22 @@ For a binary classification problem such as the one involved in strong lens dete
 \begin{equation}
 	- \sum_{n=1}^{N} y[n] \log \hat{y}[n] + (1 - y[n])\log(1 - \hat{y}[n]) \;,
 \end{equation}
-where $N$ is the number of training instances, $y \in \{0,1\}$ is the true class of the image and $\hat{y} \in [0,1]$ is the class probability predicted by the model. This optimization is performed by a Stochastic Gradient Descent (SGD) algorithm which updates the model iteratively by taking small gradient steps over randomly selected subsamples of the training set (so called \textit{mini-batches}). All the CNN-based methods presented in this work rely on the ADAM \citep{Kingma_2014} algorithm, an accelerated variant of SGD algorithm.
+where $N$ is the number of training instances, $y \in \{0,1\}$ is the true class of the image and $\hat{y} \in [0,1]$ is the class probability predicted by the model. This optimization is usually performed by a Stochastic Gradient Descent (SGD) algorithm which updates the model iteratively by taking small gradient steps over randomly selected subsamples of the training set (so called \textit{mini-batches}). All the CNN-based methods presented in this work rely on the ADAM \citep{Kingma_2014} algorithm, an accelerated variant of SGD algorithm. \red{True?}
 
 \fl{Things I still have to mention: activation function, dropout, batch normalisation}.
 
 
+\red{Blue terms in following need to be defined.}
 
 \subsubsection{AstrOmatic (Bertin)}
 
-The lens detector is based on a convolutional neural network (CNN), trained with the provided training datasets. The CNN is implemented in Python, using the TensorFlow framework\footnote{http://www.tensorflow.org/}. Both ground multichannel and space monochannel image classifiers have the exact same CNN architecture.
+The lens detector is based on a CNN, trained with the provided training datasets. The CNN is implemented in Python, using the TensorFlow framework\footnote{http://www.tensorflow.org/}. Both ground multichannel and space monochannel image classifiers have the exact same CNN architecture.
 
-{\color{red} (MM: I think that the co-authors should provide a more detailed description of the algorithms. For example, they should quickly explain what is a CNN and what are its general components (i.e. what kind of layers, activation functions, etc.)} 
-{\color{blue} RBM: I moved the general description of the CNN to the beginning of this section.}
-
-The network itself consists of three convolutional layers ($11\times 11\times 32$, $5\times 5 \times 64$ and $3\times 3\times 64$), followed by two fully-connected layers ($256$ and $64$ neurons) and an output softmax layer {\color{red} MM: the numbers make little sense without a description of what the mean -- see my previous comment}. The first five layers use the ELU (Exponential Linear Unit) activation function \citep{2015arXiv151107289C}, which in our tests led to significantly faster convergence compared to ReLU and even SoftPlus activation. Dropout regularization \citep{2012arXiv1207.0580H,JMLR:v15:srivastava14a} is applied to both convolutional and fully connected layers, with ``keep'' probabilities $p=2/3$ and $p=1/2$, respectively.
+The network itself consists of three convolutional layers ($11\times 11 - 32$, $5\times 5 - 64$ and $3\times 3 - 64$), followed by two fully-connected layers ($256$ and $64$ neurons) and an output \blue{softmax layer}. The first five layers use the ELU (Exponential Linear Unit) \blue{activation function} \citep{2015arXiv151107289C}, which in our tests led to significantly faster convergence compared to ReLU and even SoftPlus activation. Dropout regularization \citep{2012arXiv1207.0580H,JMLR:v15:srivastava14a} is applied to both convolutional and fully connected layers, with ``keep'' probabilities $p=2/3$ and $p=1/2$, respectively.
 
 Prior to entering the first convolutional layer, input image data are rescaled and dynamic-range compressed with function $f(x) =
 \mathrm{arcsinh} (10^{11} x)$, and bad pixels are simply set to 0.
-Data augmentation is performed in the form of random up-down and left-right image flipping, plus $k\pi/2$ rotations, where $k$ is a random integer in the $[0,3]$ range. Additionally, a small rotation with random angle $\theta$ is applied, involving bicubic image resampling. $\theta$ follows a Gaussian distribution with mean $\mu=0$ and standard deviation $\sigma_{\theta}=5^{\circ}$. No attempt was made to generate and randomize bad pixel masks in the data augmentation process.
+\blue{Data augmentation} is performed in the form of random up-down and left-right image flipping, plus $k\pi/2$ rotations, where $k$ is a random integer in the $[0,3]$ range. Additionally, a small rotation with random angle $\theta$ is applied, involving bicubic image resampling. $\theta$ follows a Gaussian distribution with mean $\mu=0$ and standard deviation $\sigma_{\theta}=5^{\circ}$. No attempt was made to generate and randomize bad pixel masks in the data augmentation process.
 
 The CNN weights are initialized to random values using a truncated Gaussian distribution with mean $\mu=0$ and standard deviation $\sigma=5.10^{-2}$. The network is trained on a Titan-X ``Pascal'' nVidia GPU using the \textit{Adam} gradient-based optimizer \citep{2014arXiv1412.6980K} during 800 epochs, with an initial learning rate $\eta(t=0)=10^{-3}$ and a learning rate decay $\eta(t+1)/\eta(t)=0.99$, where $t$ is the epoch. Because of a lack of time, tests were limited to assessing the basic classification performance on a subset of the of 1,000 images/datacubes, using the 19,000 others for training.
 
@@ -468,8 +468,8 @@ The CNN weights are initialized to random values using a truncated Gaussian dist
 
 \subsubsection{LASTRO EPFL (Geiger, Sch\"{a}fer)}
 
-We used a convolutional neural network \citep{Fukushima1980,Lecun1998} with a simple architecture of 12 layers (inspired by \citep{symmetry}), see table \ref{tab:architecture}.
-To avoid the problem of the data flow distribution getting out of the comfort zone of the activation functions (Internal Covariate Shift), we used a mix of normalization propagation \citep{norm_prop} (without the constraint on the weights but a proper initialization) and batch normalization \citep{batch_norm} (slowly disabled over the iterations).
+We used a CNN \citep{Fukushima1980,Lecun1998} with a simple architecture of 12 layers (inspired by \citep{symmetry}), see table \ref{tab:architecture}.
+To avoid the problem of the data flow distribution getting out of the comfort zone of the activation functions (\blue{Internal Covariate Shift}), we used a mix of normalization propagation \citep{norm_prop} (without the constraint on the weights but a proper initialization) and batch normalization \citep{batch_norm} (slowly disabled over the iterations).
 As activation function, we used a scaled and shifted ReLU (Rectifier Linear Unit), 
 \begin{equation} \label{eq:relu}
     \frac{1}{\sqrt{\pi-1}} (\sqrt{2 \pi} \max(0,x) - 1),
@@ -487,7 +487,7 @@ Each iteration of the gradient descent (more precisely \textit{Adam} \citep{adam
     \right.,
 \end{equation}
 where $p$ is the output of the neural network, computed over a batch of 30 images, 15 lenses and 15 nonlenses, picked from the training set.
-Making batches of 30 images adds noise to the gradient makes the iterations faster.
+Making batches of 30 images adds noise to the gradient \red{which?} makes the iterations faster.
 
 To augment the training set, each image of the batch is transformed with a random transformation of the dihedral group (rotations of 90 degrees and mirrors), its pixel values multiplied by a factor picked between $0.8$ and $1.2$ and shifted by a random value between $-0.1$ and $0.1$.
 To prevent the overfitting, we used some dropout \citep{dropout} (with a keeping probability decreasing with the iterations).
@@ -548,17 +548,17 @@ Our code is accessible on github\footnote{\url{https://github.com/antigol/lensfi
  \label{Fig1_gamoclass}
 \end{figure}
 
-Our algorithm for classification of strong lensed galaxies was developed as a convolutional neural network (CNN) used for binary classification task.
-Our code was trained and tested on the space-based dataset (dataset 0) provided for the Strong lensing challenge, comprising 20,000 stamps of single band simulated galaxies. We used the full dataset in the proportion of 4/5 for training and 1/5 for validation. The training images were labelled with 1 if showing strong lensing and 0 otherwise. Our CNN gives as output a probability [0,1] of the input image being a strongly lensed system.
-The final architecture of our model is illustrated in Fig. \ref{Fig1_gamoclass}. The input image (101x101 pixels) is first processed by a 2D convolution layer with a 3x3 filter size, then subsampled by a 3x3 max pooling layer. Other two identical units follow, with a growing dimensionality of the output space (depth, i.e.output number of filters) in the convolution, for a total of 3 convolutional layers and 3 max pooling layers. Each of these convolutional layers is followed by a rectified linear unit (ReLU) step. The output of these units is then processed through a single fully-connected layer follower by a dropout layer, and, finally, by a one-neuron fully connected layer with sigmoid activation function. For the classification problem we used the binary cross-entropy cost function and for weights updates we used an adaptive moment estimation (ADAM, \citealt{Kingma_2014}) optimization method. The use of the ADAM optimizer improves the learning rate, and previous tests with stochastic gradient descent (SGD) lead to worse results on the classification of the validation sample.
+Our algorithm for classification of strong lensed galaxies was developed as a CNN used for binary classification task.
+Our code was trained and tested on the space-based dataset (dataset 0) provided for the Ssrong lensing challenge, comprising 20,000 stamps of single band simulated galaxies. We used the full dataset in the proportion of 4/5 for training and 1/5 for validation. The training images were labelled with 1 if showing strong lensing and 0 otherwise. Our CNN gives as output a probability [0,1] of the input image being a strongly lensed system.
+The final architecture of our model is illustrated in Fig. \ref{Fig1_gamoclass}. The input image (101x101 pixels) is first processed by a 2D convolution layer with a 3x3 filter size, then subsampled by a 3x3 max pooling layer.  Another two identical units follow, with a growing dimensionality of the output space (depth, i.e.output number of filters) in the convolution, for a total of 3 convolutional layers and 3 max pooling layers. Each of these convolutional layers is followed by a \blue{rectified linear unit (ReLU) step}. The output of these units is then processed through a single fully-connected layer follower by a dropout layer, and, finally, by a one-neuron fully connected layer with sigmoid activation function. For the classification problem we used the binary cross-entropy cost function and for weights updates we used an adaptive moment estimation (ADAM, \citealt{Kingma_2014}) optimization method. The use of the ADAM optimizer improves the learning rate, and previous tests with stochastic gradient descent (SGD) lead to worse results on the classification of the validation sample.
 In order to increase the size of the training set and make the model invariant to specific transformations, we perform several data augmentation steps:
 \begin{itemize}
-\item Random rotation of the image in the range [0, 180$\degree$], using a reflection fill mode to keep constant the size of the images.
+\item Random rotation of the image in the range [0, 180$\degree$], using a \blue{reflection fill mode} to keep constant the size of the images.
 \item The images were randomly shifted of 0.02 times the total width of the image.
 \item Random horizontal and vertical flips of the images
 \end{itemize}
-During the training we initialize the weights of our model with random normal values and we warm up the training \citet{Huang_2016} of the CNN for 25 epochs, using an exponential decay rate (1e-6) and a staring learning rate of α = 0.001. Then the network is trained using an early stopping method, and for a maximum number of 300 epochs. The early stopping method is an effective method to prevent overfitting and consists in stopping the training if a monitored quantity does not improve for a fixed number (called \textit{patience}) of training epochs. The quantity that we monitored was the \textit{accuracy} of the classification of the validation sample. The best architecture was trained over 220 epochs with a parameter of patience equal to 20.
-We implemented our code the Keras framework \citet{Chollet_2015} on top of Theano \citet{Bastien_2012}.
+During the training we initialize the weights of our model with random normal values and we warm up the training \citet{Huang_2016} of the CNN for 25 epochs, using an exponential decay rate ($10^{-6}$) and a staring learning rate of α = 0.001. Then the network is trained using an early stopping method, and for a maximum number of 300 epochs. The early stopping method is an effective method to prevent overfitting and consists in stopping the training if a monitored quantity does not improve for a fixed number (called \textit{patience}) of training epochs. The quantity that we monitored was the \textit{accuracy} of the classification of the validation sample. The best architecture was trained over 220 epochs with a parameter of patience equal to 20.
+We implemented our code the Keras framework \citep{Chollet_2015} on top of Theano \citep{Bastien_2012}.
 Our architecture converges with a classification accuracy of 91\% on the validation sample. We further evaluated the performance of our classifier calculating the ROC curve of the classifier, i.e. the True Positive Rate (TPR) against the False Positive Rate. As shown in Fig. \ref{Fig2_gamoclass}, we reach a TPR higher than the 90\% with a FPR < 8\%.
 
 \begin{figure}
@@ -572,7 +572,6 @@ Our architecture converges with a classification accuracy of 91\% on the validat
 %-------------------------------------------------%
 \subsubsection{CAST (Bom, Valent\'in, Makler)}
 %-------------------------------------------------%
-[Note: we are placing this section here, but we agree it is good to group the methods. Perhaps machine learning based methods could go on a separate section and a unified description can be given to CNN-based methods, as most follow under this category.]
 
 The CBPF Arc Search Team (CAST) tested several arcfinding schemes using as core a CNN. For both the space-based and ground-based samples we carried out a simple preprocessing phase to enhance the objects in the images in order to check if they improve the automated arc detection with CNN. We chose a contrast adjustment with $0.1\%$ pixel saturation and apply a low pass band Wiener filter \citep{wiener1964extrapolation} to reduce the effect of the noise. 
 
@@ -588,7 +587,7 @@ We found that the results, accounting for the uncertainties,
 were clearly superior for the area under the ROC in the case 
 including the preprocessing. Therefore, this is the configuration we have used for the challenge. 
 
-As mentioned above, the CNN used can take 3 images as input. Thus, if we want to use the information on the $4$ available bands, we will have to either combine $2$ of the $4$ bands to end up with $3$ bands for a single RGB CNN (configuration I below) or we use multiple CNNs to use the information available (configuration II to VI below). To combine the outputs of several CNNs we use a Support Vector Machine \citep[hereafter SVM; see e.g., ][]{rebentrost2014quantum} also implemented in Matlab. The SVM is used to combine the outputs $p_i$ of the several CNN (configurations II, III, IV and VI). Instead of using only $p_i$ as inputs to the SVM we also tested providing the SVM with image features obtained by the CNN (feature maps, configuration V) as inputs. In all cases we tested with and without the preprocessing
+As mentioned above, the CNN used can take 3 color images as input. Thus, if we want to use the information on the $4$ available bands, we will have to either combine $2$ of the $4$ bands to end up with $3$ bands for a single RGB CNN (configuration I below) or we use multiple CNNs to use the information available (configuration II to VI below). To combine the outputs of several CNNs we use a Support Vector Machine \citep[hereafter SVM; see e.g., ][]{rebentrost2014quantum} also implemented in Matlab. The SVM is used to combine the outputs $p_i$ of the several CNNs (configurations II, III, IV and VI). Instead of using only $p_i$ as inputs to the SVM we also tested providing the SVM with image features obtained by the CNN (feature maps, configuration V) as inputs. In all cases we tested with and without the preprocessing
 
 A more detailed description of each configuration tested is presented below:
 \begin{enumerate}
@@ -637,13 +636,13 @@ The area under ROC, in both space based configurations were, in general, smaller
 
 \texttt{CMU DeepLens} is based on a residual network (or \textit{resnet}) architecture \citep{He2015a}, a modern variant of CNNs which can reach much greater depths (over 1000 layers) while still gaining accuracy. We provide a short overview of our model below but a full description of our architecture can be found in \citet{Lanusse2017}.
 
-Much like conventional CNNs, resnets are based on convolutional and pooling layers. However, resnet differ from CNNs by the introduction of so-called shortcut connections bypassing blocks of several convolutional layers. As a result, instead of learning the full mapping from their input to their output these residual blocks only have to learn the difference to the identity. In practice, this difference allows residual networks to be trained even for very deep models. For a more thorough description of this architecture, we refer the interested reader to Section~2.3 of \citet{Lanusse2017}.
+Much like conventional CNNs, resnets are based on convolutional and pooling layers. However, resnet differ from CNNs by the introduction of so-called shortcut connections bypassing blocks of several convolutional layers. As a result, instead of learning the full mapping from their input to their output these residual blocks only have to {\color{blue} learn the difference to the identity}\red{(I don't know what you mean by this)}. In practice, this difference allows residual networks to be trained even for very deep models. For a more thorough description of this architecture, we refer the interested reader to Section~2.3 of \citet{Lanusse2017}.
 
-Our baseline model is composed of a first 7x7-32 convolutional layer which can accommodate either single-band or multi-band images. The rest of the model is composed of 5 successive blocks, each block being made of 3 resnet units (specifically, pre-activated bottleneck residual units \citep{He2016}). At each block, the signal is downsampled by a factor 2 and the number of feature maps is in turn multiplied by 2. The model is topped by an average-pooling layer followed by a single fully-connected sigmoid layer with a single output. Apart from the final layer, we use the ELU activation throughout. The weights of the model are initialized using random normal values, following the strategy advocated in \citet{He2015a}. 
+Our baseline model is composed of a first 7x7-32 convolutional layer which can accommodate either single-band or multi-band images. The rest of the model is composed of 5 successive blocks, each block being made of 3 resnet units (specifically, pre-activated bottleneck residual units \citep{He2016}). At each block, the signal is downsampled by a factor 2 and the number of feature maps is in turn multiplied by 2. The model is topped by an average-pooling layer followed by a single fully-connected sigmoid layer with a single output. Apart from the final layer, we use the \blue{ELU} activation throughout. The weights of the model are initialized using random normal values, following the strategy advocated in \citet{He2015a}. 
 
 Training was performed using the ADAM optimizer with mini-batches of size 128 over 120 epochs, with an initial learning rate of $\alpha=0.001$, subsequently decreased by a factor 10 every 40 epochs. This multi-step training procedure is important to progressively refine the model parameters of the model and achieve our final accuracy.
 
-We adopt a minimal pre-processing pre-processing strategy for the input images, removing the mean image and normalising by the noise standard deviation $\sigma$ in each band, these statistic being evaluated over the whole training set. In addition, we clip extreme values above $250 \sigma$ to limit the dynamic range of the input. Bad-pixels are simply set to 0 after this pre-processing step.
+We adopt a minimal pre-processing strategy for the input images, removing the mean image and normalising by the noise standard deviation $\sigma$ in each band, these statistic being evaluated over the whole training set. In addition, we clip extreme values above $250 \,\sigma$ to limit the dynamic range of the input. Bad-pixels are simply set to 0 after this pre-processing step.
 
 Given the relatively small training set preventing overfitting is an important consideration. In our final model, we combine several data augmentation strategies: random rotations (in the range $[-90, \ 90^\circ]$), random mirroring along both axes, and random resizing (by a small factor in the range $[0.9, \ 1]$).
 
@@ -651,14 +650,13 @@ The architecture presented above is the one that lead to our best results in bot
 The first variant introduced several data-augmentation schemes, including the ones mentioned above and the addition of Gaussian noise to the input images. We found however that the introduction of noise was not necessary as the other methods were enough to prevent overfitting. 
 The second variant was used to explore a voting strategy between three different models. These models differed by the type of residual blocks (bottleneck vs wide) and by their handling of missing pixels (setting to 0 or to the median value of the image). The predictions of the best 2 out of 3 models were then averaged to produce the final classification probability.
 
-Our model is implemented using the \texttt{Theano}\footnote{\url{http://deeplearning.net/software/theano/}} and \texttt{Lasagne}\footnote{\url{https://github.com/Lasagne/Lasagne}} libraries. On an Nvidia Titan Xp GPU, our full training procedure requires approximately 6 hours on the ground-based challenge, but classification of the whole testing set is performed in a couple of minutes. Finally, in the interest of reproducible research, our code is made publicly available at
-\begin{center}
-\url{https://github.com/McWilliamsCenter} 
-\end{center}
+Our model is implemented using the \texttt{Theano}\footnote{\url{http://deeplearning.net/software/theano/}} and \texttt{Lasagne}\footnote{\url{https://github.com/Lasagne/Lasagne}} libraries. On an Nvidia Titan Xp GPU, our full training procedure requires approximately 6 hours on the ground-based challenge, but classification of the whole testing set is performed in a couple of minutes. Finally, in the interest of reproducible research, our code is made publicly available on GitHub\footnote{\url{https://github.com/McWilliamsCenter} }.
 This repository also contains a notebook detailing how to reproduce our challenge submission.
 
 \subsubsection{Kapteyn Resnet (Petrillo, Tortora, Verdoes Kleijn, Koopmans) }
-Our lens-finder is based on a Convolutional Neural Network (CNN), following the strategy adopted recently in \citep{2017arXiv170207675P}. 
+\red{This is a bit ragged and another submission needs to be analysed.}
+
+Our lens-finder is based on a CNN, following the strategy adopted recently in \citep{2017arXiv170207675P}. 
 
 We decide to treat the problem as a three-class classification problem where the classes are \textit{non-lenses}, \textit{clear lenses} and \textit{dubious lenses}. We define the \textit{dubious lenses} as the lenses with lensing features with less than 160 pixels and the \textit{clear lenses} those with more than 160 pixels belonging to the lensed source. This choice is motivated by the fact that specializing the network in recognizing different class could lead to a more robust classification. In addition, in a hypothetical application of the method to real data from a survey, this could be a way to select the most blatant lenses.  
 
@@ -711,7 +709,7 @@ The traditional method for evaluating a classification algorithm is with the rec
 {\rm TPR} &= \frac{\textrm{ number of true lenses classified as lenses}}{\textrm{ total number of true lenses}} \\
 {\rm FPR} &= \frac{\textrm{number of non-lenses classified as lenses}}{\textrm{ total number of non-lenses}}
 \end{align}
-The classifier generally gives a probability of a case being a lens, $p$ in which case a threshold is set and everything with $p$ greater is classified as a lens and everything smaller is classified as not a lens.  The TPR and FPR are then plotted as a curve parametrised by this threshold.  At $p=1$ all of the cases are classified as non-lenses and so TPR=FPR=1 and at $p=0$ all of the cases are classified as lenses so TPR=FPR=0.  These points are always added to the ROC curve.  If the classifier made random guesses then the ratio of lenses to non-lenses would be the same as the ratio of the number of cases classified as lens to the number of cases classified as non-lenses and so TPR=FPR.  The better a classifier is the smaller the FPR and the larger the TPR so the further away from this diagonal line it will be.  When a classifier provides only a binary classification or a discrete ranking, the ROC connects the endpoints to the discrete points found be using each rank as a threshold.
+The classifier generally gives a probability of a case being a lens, $p$, in which case a threshold is set and everything with $p$ greater is classified as a lens and everything smaller is classified as not a lens.  The TPR and FPR are then plotted as a curve parametrised by this threshold.  At $p=1$ all of the cases are classified as non-lenses and so TPR=FPR=1 and at $p=0$ all of the cases are classified as lenses so TPR=FPR=0.  These points are always added to the ROC curve.  If the classifier made random guesses then the ratio of lenses to non-lenses would be the same as the ratio of the number of cases classified as lens to the number of cases classified as non-lenses and so TPR=FPR.  The better a classifier is the smaller the FPR and the larger the TPR so the further away from this diagonal line it will be.  When a classifier provides only a binary classification or a discrete ranking, the ROC connects the endpoints to the discrete points found by using each rank as a threshold.
 
 A common figure of merit for a classifier is the area under the ROC ({\bf AUROC}).  This evaluates the overall ability of a classifier to distinguish between cases.  This was the criterion on which the challenge participants were told to optimize.  However, in the case of gravitational lensing this is not the only thing, and not the most important thing, to consider.  Gravitational lenses are rare events, but to improve the discrimination and training of the classifiers the fraction lenses in test and training sets are boosted to something around half.  In these circumstances it is important to consider the absolute number of cases that will be missclassified when the fraction of true cases is closer to what is expected in the data.
 
@@ -882,7 +880,7 @@ Figures~\ref{fig:flux_contrast_space} and \ref{fig:flux_contrast_ground} investi
 
 \red{surface brightness contrast}
 
-\red{breakups Manchester between Neil and Amit}
+\red{breakups Manchester between Neal and Amit}
 
 \section{Conclusions \& discussion}
 \label{sec:conclusion}
